# ota-esp32

./: README.md
client/: Cargo.toml
client/.cargo/: config.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
